# browser-strategy-backend

./: .continueignore  .cursorignore  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  docker-compose.dev.yml  docker-compose.yml  docker-sql  monitor.html  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 13e3f9d3d0e2_create_users_table.py  1a66fbd1a60f_create_indexes_for_owner_id.py  6aa105580c45_create_sites_table.py  74681035a9d2_init.py  86f42e962263_create_platforms_table.py  99b0d9ca3fd6_add_npc_users.py  aa8b71fed4c8_create_market_orders_table.py  baa18fb09e07_add_owner_to_ships.py  c98a4cb00fd6_create_ships_table.py  cb188a0c0d63_make_users_password_hash_nullable.py  fe1d485f6517_alter_site_table.py
monitor_v2/: main.css  main.js  monitor.html
src/app/: main.py  run_web.py  seed.py  web.py
src/app/bootstrap/: container.py
src/app/cli/: __init__.py  __main__.py  helper.py  market.py  user.py
src/app/core/: config.py  db.py  disposer.py  engine.py  exceptions.py  logging_config.py  security.py  types.py
src/app/defs/: consts.py  deposites.py  enums.py  items.py  modules.py  ship_hull.py
src/app/entities/: anchor_point.py  base.py  environment.py  fleet.py  platform.py  resources_pool.py  ship.py  ship_hull.py  site.py  storage.py  user.py  world.py
src/app/mappers/: anchor_point.py  fleet.py  platform.py  ship.py  site.py  user.py
src/app/models/: __init__.py  fleet.py  market_order.py  platform.py  ship.py  site.py  user.py
src/app/repositories/: fleet.py  market_order.py  platform.py  ship.py  site.py  (+4 more)
(+84 files in other folders)
