[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "spirt"}
]
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "redis (>=7.4.0,<8.0.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "websockets (>=16.0,<17.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "typer (>=0.25.1,<0.26.0)",
    "click (>=8.3.3,<9.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
]

[tool.poetry]
packages = [{ include = "app", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
